--- a/races.html
+++ b/races.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Races</title>
 
-  <link rel="stylesheet" href="styles.css?v=17"/>
+  <link rel="stylesheet" href="styles.css?v=18"/>
 
   <style>
     /* ---------- scoped styles for the React widget ---------- */
@@ -22,25 +22,27 @@
     .react-tile .n{ font-weight:800; font-size:22px; letter-spacing:.2px; background:linear-gradient(90deg,#1d4ed8,#06b6d4); -webkit-background-clip:text; background-clip:text; color:transparent; }
     .react-tile .l{ font-size:12px; color:#6b7280; margin-top:4px; }
 
-    /* chart */
+    /* simple bar chart */
     .react-chart-title{ font-size:13px; font-weight:700; color:#374151; margin-bottom:8px; }
-    .react-chart{ border:1px solid rgba(17,19,24,.10); border-radius:12px; }
-    .react-chart-legend{ display:flex; flex-wrap:wrap; gap:6px; margin-top:8px; }
-    .react-chip{ font-size:12px; padding:3px 6px; border:1px solid rgba(17,19,24,.12); border-radius:999px; background:#fff; color:#374151; }
+    .react-bars-wrap{ border:1px solid rgba(17,19,24,.10); border-radius:12px; padding:10px; background:#fff; }
+    .react-bars{ display:grid; grid-auto-flow:column; grid-auto-columns:1fr; align-items:end; height:160px; gap:8px; padding:8px 6px 2px; }
+    .react-bar{ position:relative; background:#e5efff; border:1px solid #c7dbff; border-radius:6px 6px 0 0; }
+    .react-bar::after{ content:attr(data-miles) " mi"; position:absolute; left:50%; transform:translateX(-50%); bottom:100%; font-size:11px; color:#374151; margin-bottom:4px; white-space:nowrap; }
+    .react-x{ display:grid; grid-auto-flow:column; grid-auto-columns:1fr; gap:8px; margin-top:6px; font-size:11px; color:#6b7280; text-align:center; }
 
-    /* medals row */
+    /* medals row (actual medal images) */
     .react-medals{ display:grid; gap:10px; grid-template-columns:repeat(2, minmax(0,1fr)); }
     @media (max-width:640px){ .react-medals{ grid-template-columns:1fr; } }
-    .react-medal{ display:grid; grid-template-columns:72px 1fr; gap:10px; align-items:center; border:1px solid rgba(0,0,0,.06); border-radius:12px; padding:10px; background:#fff; }
-    .react-medal .thumb{ width:72px; height:72px; display:grid; place-items:center; border-radius:10px; background:#fff; border:1px solid rgba(0,0,0,.06); overflow:hidden; }
+    .react-medal{ display:grid; grid-template-columns:88px 1fr; gap:12px; align-items:center; border:1px solid rgba(0,0,0,.06); border-radius:12px; padding:10px; background:#fff; }
+    .react-medal .thumb{ width:88px; height:88px; display:grid; place-items:center; border-radius:10px; background:#fff; border:1px solid rgba(0,0,0,.06); overflow:hidden; }
     .react-medal img{ max-width:100%; max-height:100%; object-fit:contain; display:block; }
     .react-medal h4{ margin:0 0 2px; font-size:14px; }
     .react-medal .meta{ font-size:12px; color:#6b7280; }
 
     /* race cards */
     .react-stack{ display:grid; gap:16px; }
-    .react-bar{ display:flex; align-items:center; justify-content:space-between; gap:12px; margin-bottom:10px; }
-    .react-bar h2{ margin:0; font-size:18px; }
+    .react-bar-hdr{ display:flex; align-items:center; justify-content:space-between; gap:12px; margin-bottom:10px; }
+    .react-bar-hdr h2{ margin:0; font-size:18px; }
     .react-date{ color:#60646c; font-size:13px; }
 
     .react-grid{ display:grid; gap:16px; grid-template-columns:minmax(0,58%) minmax(0,42%); align-items:stretch; }
@@ -60,6 +62,7 @@
 
     .react-tags{ display:flex; flex-wrap:wrap; gap:6px; margin-top:2px; }
     .react-tag{ font-size:12px; padding:3px 6px; border:1px solid rgba(17,19,24,.12); border-radius:999px; background:#fff; color:#374151; }
+    .react-pr{ color:#0ea5e9; font-weight:700; }
 
     /* slider (no crop) */
     .react-slider{ position:relative; width:100%; border-radius:14px; overflow:hidden; background:#fff; }
@@ -105,7 +108,7 @@
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
   <script type="text/babel">
-    const { useEffect, useMemo, useRef, useState } = React;
+    const { useEffect, useRef, useState } = React;
 
     /* ------------ DATA ------------- */
     const RACES = [
@@ -115,19 +118,20 @@
         dateLabel: "July 27, 2025",
         title: "San Francisco 10K",
         distance: 6.2,
-        trainingMiles: 120,
-        finishSeconds: 4200,
+        trainingMiles: 120,             // update if you want
+        finishSeconds: 4200,            // keep in seconds; edit time here, pace updates everywhere
         description:
-          "Ran it side-by-side with my girlfriend while we were in SF for the summer. Cool air, rolling streets, and a good day overall.",
+          "Ran side-by-side with my girlfriend while we were in SF for the summer. Cool air, rolling streets, easy to smile the whole way.",
         bullets: [
           "Course: rolling streets + cool coastal air",
-          "Fuel: light (water only) — gel pre-start",
-          "Shoes: (fill in)",
+          "Fuel: water only — gel pre-start",
+          "Shoes: Hoka Clifton 9",
           "Next goal: stronger middle miles",
         ],
+        medal: "images/medals/sf10k-medal.jpg",  // <- put the medal photo here
         media: [
-          { type: "img", src: "images/races/SF10K.JPG",  alt: "San Francisco 10K – medal & bib" },
-          { type: "img", src: "images/races/SF10K1.JPG", alt: "San Francisco 10K – after the finish" },
+          { type: "img", src: "images/races/SF10K.JPG",  alt: "San Francisco 10K" },
+          { type: "img", src: "images/races/SF10K1.JPG", alt: "San Francisco 10K — finish" },
         ],
       },
       {
@@ -137,20 +141,21 @@
         title: "Surf City Marathon",
         distance: 26.2,
         trainingMiles: 820,
-        finishSeconds: 14280, // 3:58:00
+        finishSeconds: 14280,           // e.g. 3:58:00; change as needed
         description:
-          "First full marathon. Windy along PCH, loud crowd, and a sub-4 finish that felt huge.",
+          "First full. Windy along PCH, big crowd energy, and a sub-4 that felt massive.",
         bullets: [
           "Course: out-and-back along PCH",
           "Fuel: gels + electrolytes every 5–6 miles",
-          "Shoes: (fill in)",
+          "Shoes: Hoka Clifton 9",
           "Next goal: stronger last 10K",
         ],
+        medal: "images/medals/surfcity-medal.jpg", // <- put the marathon medal photo here
         media: [
-          { type: "img",   src: "images/races/SurfCity1.JPG", alt: "Surf City – family at the finish" },
-          { type: "img",   src: "images/races/SurfCity2.JPG", alt: "Surf City – course fence" },
-          { type: "img",   src: "images/races/SurfCity3.JPG", alt: "Surf City – friends at the finish" },
-          { type: "video", src: "images/races/SurfCity4.mp4", alt: "Surf City – finish video" },
+          { type: "img",   src: "images/races/SurfCity1.JPG", alt: "Surf City — finish" },
+          { type: "img",   src: "images/races/SurfCity2.JPG", alt: "Surf City — course" },
+          { type: "img",   src: "images/races/SurfCity3.JPG", alt: "Surf City — friends" },
+          { type: "video", src: "images/races/SurfCity4.mp4", alt: "Surf City — finish video" },
         ],
       },
       {
@@ -160,19 +165,20 @@
         title: "Long Beach Half Marathon",
         distance: 13.1,
         trainingMiles: 471,
-        finishSeconds: 7140, // 1:59:00
+        finishSeconds: 7140,            // 1:59:00
         description:
-          "First half with Emma. Messy training, fun race, snuck in under two hours.",
+          "Half with Emma. Messy training, early morning, and a sub-2 that still makes me grin.",
         bullets: [
           "Course: flat waterfront + coastal breeze",
           "Fuel: gels + water at every station",
-          "Shoes: (fill in)",
-          "Next time: aim for a negative split",
+          "Shoes: Hoka Clifton 9",
+          "Next time: try for a negative split",
         ],
+        medal: "images/medals/longbeach-medal.jpg", // optional
         media: [
-          { type: "img", src: "images/races/LongBeachHalf1.JPG", alt: "Long Beach Half – medal" },
-          { type: "img", src: "images/races/LongBeachHalf2.JPG", alt: "Long Beach Half – cheering squad" },
-          { type: "img", src: "images/races/LongBeachHalf3.JPG", alt: "Long Beach Half – finish area" },
+          { type: "img", src: "images/races/LongBeachHalf1.JPG", alt: "Long Beach Half — medal" },
+          { type: "img", src: "images/races/LongBeachHalf2.JPG", alt: "Long Beach Half — cheering squad" },
+          { type: "img", src: "images/races/LongBeachHalf3.JPG", alt: "Long Beach Half — finish area" },
         ],
       },
     ];
@@ -201,37 +207,31 @@
       const m = Math.floor(secsPerMile/60), s = Math.round(secsPerMile%60);
       return `${m}:${pad(s)}/mi`;
     };
-    const cx = (...xs) => xs.filter(Boolean).join(" ");
-
     const sum = (arr, key)=>arr.reduce((t,x)=>t+(typeof key==="function"?key(x):x[key]),0);
+    const minBy = (arr, f)=>arr.reduce((best,x)=>f(x)<f(best)?x:best, arr[0]);
 
-    /* ------------ CHART ------------- */
-    function TinyLineChart({ data }) {
-      const w = 560, h = 160, padXY = 24;
-      const ys = data.map(d => d.miles);
-      const yMax = Math.max(1, ...ys);
-      const points = data.map((d,i)=>{
-        const x = padXY + (i/(data.length-1||1))*(w-padXY*2);
-        const y = h - padXY - (d.miles/yMax)*(h-padXY*2);
-        return `${x},${y}`;
-      }).join(" ");
+    /* ------------ bar chart ------------- */
+    function MilesBarChart({ data }) {
+      const max = Math.max(1, ...data.map(d=>d.miles));
       return (
-        <div className="react-card">
+        <div className="react-bars-wrap">
           <div className="react-chart-title">Weekly training miles</div>
-          <svg width={w} height={h} viewBox={`0 0 ${w} ${h}`} className="react-chart">
-            <rect x="0" y="0" width={w} height={h} fill="#fff" rx="12" />
-            <polyline fill="none" stroke="#e5e7eb" strokeWidth="1"
-              points={`${padXY},${h-padXY} ${w-padXY},${h-padXY}`} />
-            <polyline fill="none" stroke="#3b82f6" strokeWidth="2.5" points={points} />
-          </svg>
-          <div className="react-chart-legend">
-            {data.map((d,i)=>(<span key={i} className="react-chip">{d.week.slice(5)} · {d.miles} mi</span>))}
+          <div className="react-bars">
+            {data.map((d,i)=>(
+              <div key={i}
+                   className="react-bar"
+                   data-miles={d.miles}
+                   style={{ height: `${(d.miles/max)*100}%` }} />
+            ))}
+          </div>
+          <div className="react-x">
+            {data.map((d,i)=> <div key={i}>{d.week.slice(5)}</div>)}
           </div>
         </div>
       );
     }
 
-    /* ------------ SLIDER ------------- */
+    /* ------------ slider (no crop) ------------- */
     function MediaSlider({ media }) {
       const [i, setI] = useState(0);
       const trackRef = useRef(null);
@@ -266,14 +266,14 @@
           <button className="react-nav react-next" aria-label="Next" onClick={()=>go(i+1)}>›</button>
           <div className="react-dots">
             {media.map((_,idx)=>(
-              <button key={idx} className={cx("react-dot", idx===i && "on")} onClick={()=>setI(idx)} aria-label={`Go to slide ${idx+1}`}/>
+              <button key={idx} className={("react-dot "+(idx===i?"on":""))} onClick={()=>setI(idx)} aria-label={`Go to slide ${idx+1}`}/>
             ))}
           </div>
         </div>
       );
     }
 
-    /* ------------ SMALL PIECES ------------- */
+    /* ------------ small pieces ------------- */
     function StatTile({ label, value, isTime=false }) {
       return (
         <div className="react-stat">
@@ -283,44 +283,47 @@
       );
     }
 
+    function TagRow({ race, fastestPace }){
+      const tags=[];
+      race.bullets.forEach(b=>{
+        const [k,v] = b.split(":"); if(!v) return;
+        const key=k.trim(), val=v.trim();
+        if(key==="Course") tags.push(val);
+        if(key==="Fuel")   tags.push(`Fuel: ${val}`);
+        if(key==="Shoes")  tags.push(`Shoes: ${val}`);
+      });
+      const myPace = race.finishSeconds / race.distance;
+      const isPR = Math.abs(myPace - fastestPace) < 0.01; // within ~0.6 sec/mi
+      return (
+        <div className="react-tags">
+          <span className="react-tag">Avg pace: {paceStr(myPace)}{isPR ? " · " : ""}</span>
+          {isPR && <span className="react-tag react-pr">PR</span>}
+          {tags.map((t,i)=><span className="react-tag" key={i}>{t}</span>)}
+        </div>
+      );
+    }
+
     function MedalCard({ race }){
-      const firstImg = race.media.find(m=>m.type==="img") || race.media[0];
-      const p = paceStr(race.finishSeconds / race.distance);
+      const src = race.medal || (race.media.find(m=>m.type==="img")||{}).src;
+      const p = race.finishSeconds / race.distance;
       return (
         <div className="react-medal">
           <div className="thumb">
-            {firstImg?.type==="img"
-              ? <img src={firstImg.src} alt={`${race.title} medal`}/>
-              : <div className="meta">video</div>}
+            {src ? <img src={src} alt={`${race.title} medal`}/> : <div className="meta">No medal image yet</div>}
           </div>
           <div>
             <h4>{race.title}</h4>
-            <div className="meta">{race.dateLabel} · {race.distance} mi · {formatTime(race.finishSeconds)} ({p})</div>
+            <div className="meta">{race.dateLabel} · {race.distance} mi · {formatTime(race.finishSeconds)} ({paceStr(p)})</div>
           </div>
         </div>
       );
     }
 
-    function parseTags(bullets){
-      const tags=[];
-      bullets.forEach(b=>{
-        const [k,v] = b.split(":");
-        if(!v) return;
-        const key = k.trim(); const val = v.trim();
-        if(key==="Course") tags.push(val);
-        if(key==="Fuel")   tags.push(`Fuel: ${val}`);
-        if(key==="Shoes")  tags.push(`Shoes: ${val}`);
-      });
-      return tags;
-    }
-
-    /* ------------ RACE CARD ------------- */
-    function RaceCard({ race }) {
+    function RaceCard({ race, fastestPace }) {
       const pace = race.finishSeconds / race.distance;
-      const tags = parseTags(race.bullets);
       return (
         <section className="react-card">
-          <div className="react-bar">
+          <div className="react-bar-hdr">
             <h2>{race.title}</h2>
             <span className="react-date">{race.dateLabel}</span>
           </div>
@@ -340,11 +343,7 @@
                 <StatTile label="avg pace" value={paceStr(pace)} />
               </div>
 
-              {tags.length>0 && (
-                <div className="react-tags">
-                  {tags.map((t,i)=><span className="react-tag" key={i}>{t}</span>)}
-                </div>
-              )}
+              <TagRow race={race} fastestPace={fastestPace} />
 
               <p className="react-text">{race.description}</p>
               <ul className="react-bullets">
@@ -356,14 +355,13 @@
       );
     }
 
-    /* ------------ TOP AREA (metrics + medals + chart) ------------- */
+    /* ------------ top area ------------- */
     function TopBlock(){
       const total2025 = sum(TRAINING.filter(d=>d.week.startsWith("2025")), "miles");
       const races2025 = RACES.filter(r=>r.dateISO.startsWith("2025")).length;
       const raceMilesAll = sum(RACES, "distance");
-      const fastestPace = Math.min(...RACES.map(r=>r.finishSeconds/r.distance));
-
-      const medals = RACES.filter(r=>["sf10k-2025","surf-city-2025"].includes(r.id));
+      const fastest = minBy(RACES, r => r.finishSeconds/r.distance); // fastest pace race
+      const fastestPace = fastest.finishSeconds/fastest.distance;
 
       return (
         <div className="react-metrics">
@@ -375,27 +373,29 @@
               <div className="react-tile"><div className="n">{paceStr(fastestPace)}</div><div className="l">fastest race pace</div></div>
             </div>
             <div style={{height:10}}></div>
-            <TinyLineChart data={TRAINING} />
+            <MilesBarChart data={TRAINING} />
           </div>
 
           <div className="react-card">
             <div style={{fontSize:13, fontWeight:700, color:"#374151", marginBottom:8}}>Medals</div>
             <div className="react-medals">
-              {medals.map(m => <MedalCard key={m.id} race={m} />)}
+              {RACES.filter(r=>r.medal).map(r => <MedalCard key={r.id} race={r} />)}
             </div>
           </div>
         </div>
       );
     }
 
-    /* ------------ APP ------------- */
+    /* ------------ app ------------- */
     function RacesApp(){
+      const fastest = minBy(RACES, r => r.finishSeconds/r.distance);
+      const fastestPace = fastest.finishSeconds/fastest.distance;
       return (
         <div className="react-wrap">
           <TopBlock/>
           <div style={{height:14}}></div>
           <div className="react-stack">
-            {RACES.map(r => <RaceCard key={r.id} race={r} />)}
+            {RACES.map(r => <RaceCard key={r.id} race={r} fastestPace={fastestPace} />)}
           </div>
         </div>
       );
